# code-grader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildrun.sh  buildtest.sh  deployrun.sh  setup.sh
include/: file-input.h  globals.h  numeric-utils.h  pipe-handler.h  string-utils.h  utils.h
include/file-input/: file-retriever.h  inputs-reader-internal.hpp  inputs-reader.h  parser.h
include/file-io/: file-input.h
resources/questions/: magic-translator.json  question1.txt
src/: _file-input.txt  file-input.cpp  main.cpp  pipe-handler.cpp
src/file-input/: file-retriever.cpp  inputs-reader.cpp  parser.cpp
src/file-io/: file-input.cpp
tests/: main.cpp
tests/file-input/: inputs-reader.cpp  json-test.cpp  parser.cpp  test-arr.json  test-obj.json
